# python-web-fall-2022

./: HW4.md  README.md  docker-compose.yaml  hw5.md  pyproject.toml
client/: main.py
client/definitions/: service.proto
client/definitions/builds/: service_pb2.py  service_pb2_grpc.py
client/models/: polynomial_models.py
consumer/: consumer_count.py  reciever_count.py
server/: pyproject.toml  server.py
server/services/: polynomial_service.py
server/tests/: test_integration.py  test_service.py
src/main/: main.py
src/main/models/: request_models.py
src/main/routers/: default_routes.py  rabbit_routes.py
test/: test_count_subscriber.py  test_integration.py  test_request.py
